# stmt-forge

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
scripts/: run_pipeline_job.ps1
src/stmtforge/: __init__.py  cli.py  config_template.yaml  hybrid_pipeline.py  run_pipeline.py
src/stmtforge/dashboard/: app.py
src/stmtforge/database/: db.py
src/stmtforge/extractor/: __init__.py  core.py
src/stmtforge/gmail/: __init__.py  auth.py  fetcher.py
src/stmtforge/llm/: __init__.py  client.py  prompts.py
src/stmtforge/parsers/: __init__.py  axis_parser.py  base_parser.py  categorizer.py  csb_parser.py  federal_parser.py  generic_parser.py  hdfc_parser.py  icici_parser.py  idfc_first_parser.py  kotak_parser.py  registry.py  sbi_parser.py  yes_parser.py
src/stmtforge/pdf_processing/: __init__.py  extractor.py  unlocker.py
src/stmtforge/scripts/: check_cards.py  fix_card_names.py
src/stmtforge/utils/: __init__.py  config.py  hashing.py  logging_config.py  privacy_logging.py  run_logger.py  scope_filter.py
src/stmtforge/validator/: __init__.py  transaction_validator.py
tests/: test_backfill_unknown.py  test_scope_filter.py
