[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stmtforge"
version = "0.1.0"
description = "Parse credit card PDF statements from Indian banks (HDFC, ICICI, SBI, Axis, Kotak + 4 more) into structured data. Offline, privacy-first, with Streamlit dashboard."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Madhav", email = "madhav921@users.noreply.github.com"},
]
keywords = [
    "credit-card", "statement-parser", "pdf-parser", "indian-banks",
    "personal-finance", "expense-tracker", "hdfc", "icici", "sbi",
    "offline", "privacy", "streamlit-dashboard", "ollama", "ocr",
    "transaction-parser", "bank-statement",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
]

dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.1.0",
    "pikepdf>=8.0.0",
    "pdfplumber>=0.10.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]
ocr = [
    "pdf2image>=1.16.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=8.0.0",
    "build",
    "twine",
]

[project.scripts]
stmtforge = "stmtforge.cli:main"

[project.urls]
Homepage = "https://github.com/madhav921/stmt-forge"
Repository = "https://github.com/madhav921/stmt-forge"
Issues = "https://github.com/madhav921/stmt-forge/issues"
Security = "https://github.com/madhav921/stmt-forge/blob/main/SECURITY.md"
Changelog = "https://github.com/madhav921/stmt-forge/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
